--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "linebreak-style": ["error", "windows"],
+    // "linebreak-style": ["error", "windows"],
     "@typescript-eslint/no-unused-vars": 2,
     "max-len": ["error", { "code": 120, "ignoreStrings": true, "ignoreComments": true }],
     "comma-dangle": "off",
@@ -23,7 +23,8 @@
     "@typescript-eslint/no-use-before-define": "off",
     "max-params": "off",
     "no-restricted-syntax": "off",
-    "jsx-quotes": ["error", "prefer-single"]
+    "jsx-quotes": ["error", "prefer-single"],
+    "linebreak-style": 0
   }
 }
 
